--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h2>Hello world</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit iusto impedit suscipit porro quam sint alias dolores inventore beatae totam error voluptatem qui tenetur, eos natus non quos blanditiis.</p>
 </body>
 </html>
